fix: updated routes + cookies (#7)
* fix: updated routes + cookies

* fix: updated db schema + swag docs
