# controllers/user/register.go
@@ -12,20 +12,20 @@ import (
 )
 
 type AuthUserRegisterRequest struct {
-	Username     string `json:"user_name" binding:"required"`
-	Email        string `json:"user_email" binding:"required"`
-	Fullname     string `json:"user_fullname" binding:"required"`
-	Password     string `json:"user_password" binding:"required"`
-	Sex          string `json:"user_sex" binding:"required"`
-	Nationality  string `json:"user_nationality" binding:"required"`
-	Address      string `json:"user_address" binding:"required"`
-	Pincode      string `json:"user_pincode" binding:"required"`
-	State        string `json:"user_state" binding:"required"`
-	City         string `json:"user_city" binding:"required"`
-	Phone        string `json:"user_phone" binding:"required"`
-	Degree       string `json:"user_degree" binding:"required"`
-	Year         string `json:"user_year" binding:"required"`
-	College      string `json:"user_college" binding:"required"`
+	Username     string `json:"user_name"`
+	Email        string `json:"user_email"`
+	Fullname     string `json:"user_fullname"`
+	Password     string `json:"user_password"`
+	Sex          string `json:"user_sex"`
+	Nationality  string `json:"user_nationality"`
+	Address      string `json:"user_address"`
+	Pincode      string `json:"user_pincode"`
+	State        string `json:"user_state"`
+	City         string `json:"user_city"`
+	Phone        string `json:"user_phone"`
+	Degree       string `json:"user_degree"`
+	Year         string `json:"user_year"`
+	College      string `json:"user_college"`
 	OtherCollege string `json:"user_othercollege"`
 	Sponsor      string `json:"user_sponsor"`
 	VoucherName  string `json:"user_voucher_name"`
@@ -33,16 +33,16 @@ type AuthUserRegisterRequest struct {
 	Country      string `json:"user_country"`
 }
 
-// @Summary Register a new user.
-// @Description Register a new user with the provided details.
-// @ID AuthUserRegister
-// @Accept json
-// @Produce json
-// @Param request body AuthUserRegisterRequest true "User registration request"
-// @Success 200 {string} string "Success"
-// @Failure 400 {string} string "Invalid Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /user/register [post]
+// @Summary		Register a new user.
+// @Description	Register a new user with the provided details.
+// @ID				AuthUserRegister
+// @Accept			json
+// @Produce		json
+// @Param			request	body		AuthUserRegisterRequest	true	"User registration request"
+// @Success		200		{string}	string					"Success"
+// @Failure		400		{string}	string					"Invalid Request"
+// @Failure		500		{string}	string					"Internal Server Error"
+// @Router			/user/register [post]
 func AuthUserRegister(c echo.Context) error {
 	var req AuthUserRegisterRequest
 	if err := c.Bind(&req); err != nil {
@@ -75,12 +75,12 @@ func AuthUserRegister(c echo.Context) error {
 			// Creating password hash
 			passwordHash, err := bcrypt.GenerateFromPassword([]byte(req.Password), 10)
 			if err != nil {
-				return utils.SendResponse(c, http.StatusInternalServerError, "Internal Server errors")
+				return utils.SendResponse(c, http.StatusInternalServerError, "Internal Server error")
 			}
 			// Fetching College details
 			if err := db.Where("Name = ?", req.College).First(&collegeDetails).Error; err != nil {
 				if err == gorm.ErrRecordNotFound {
-					return utils.SendResponse(c, http.StatusBadRequest, "Enter valid college name")
+					return utils.SendResponse(c, http.StatusBadRequest, "Enter a valid college name")
 				}
 				return utils.SendResponse(c, http.StatusInternalServerError, "Error in finding College")
 			}
