# router/router.go
@@ -1,19 +1,15 @@
 package router
 
 import (
-	"net/http"
-
+	controllers "github.com/delta/FestAPI/controllers/general"
 	"github.com/labstack/echo/v4"
 	echoSwagger "github.com/swaggo/echo-swagger"
 )
 
 func NewRouter(e *echo.Echo) {
-	e.GET("/", func(c echo.Context) error {
-		return c.String(http.StatusOK, "Hello, World!")
-	})
-
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 	apiRouter := e.Group("/api")
+	apiRouter.GET("/ping", controllers.Ping)
 	userRouter(apiRouter)
 	adminRouter(apiRouter)
 	eventsRouter(apiRouter)
